# eosrecovery

./: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/api/: index.js
frontend/src/layout/: Footer.vue  Header.vue
frontend/src/pages/: Home.vue  Initialize.vue  Partners.vue  Recover.vue  Recovery.vue  Requests.vue
frontend/src/store/modules/: index.js
recovery-backend/: README.md
recovery-backend/backend/: package.json  readme.md
recovery-backend/backend/batch/: batch_config.js  index.js
recovery-backend/backend/config/: developer.json  development.json
recovery-backend/backend/deploy/: eco_developer.json  eco_development.json
recovery-backend/backend/doc/: mongo.txt
recovery-backend/backend/external_apis/: eos_api.js  sms_api.js
recovery-backend/backend/libs/: enum.js
recovery-backend/backend/models/mongo/: action.js  index.js  notification.js  recovery.js  summary.js
recovery-backend/backend/routes/api/: index.js
recovery-backend/backend/tools/: create_summary.js  update_auth.js
recovery-backend/contracts/: CMakeLists.txt  README.md  build.sh
recovery-backend/contracts/recovery/: CMakeLists.txt  README.md  recovery.hpp
recovery-backend/contracts/recovery/abi/: recovery.abi
recovery-backend/contracts/recovery/include/recovery/: recovery.hpp
recovery-backend/contracts/recovery/src/: a.out  recovery.cpp  recovery.hpp
recovery-backend/contracts/tests/: contracts.hpp  contracts.hpp.in  recovery.cpp  test.hpp
recovery-frontend/: README.md
(+10 files in other folders)
